# cheriot-audit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  audit.cc  compartment.hh  rtos.hh
.github/workflows/: main.yml
Tests/: CMakeLists.txt  compartment_allow_list.query  compartment_callers.query  compartment_callers.query.expected  compartment_check.query  compartment_check.query.expected  demangle_compartment_call.query  demangle_compartment_call.query.expected  demangle_libcall.query  demangle_libcall.query.expected  invalid_hex.query  mmio_check.query  sum_quotas.query  sum_quotas.query.expected  testexpected.sh  true.query  undefined.query  valid_hex.query
